--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,5 +21,7 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Tests
+      run: ./gradlew test
     - name: Build with Gradle
       run: ./gradlew build
