--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,17 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+      - uses: actions/checkout@v3
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Tests
-      run: ./gradlew test
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Tests
+        run: ./gradlew test
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: grandMA3-Remote
+          path: app/build/outputs/apk/debug/app-debug.apk
