feat: add buttons in layout

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ navigationUi = "2.6.0"
 javaoscCore = "0.8"
 javosc = "1.0"
 javaosc = "0.8"
+materialVersion = "1.12.0-rc01"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -28,6 +29,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 javaosc-core = { group = "com.illposed.osc", name = "javaosc-core", version = "0.7" }
 javosc = { group = "net.sf.javosc", name = "javosc", version.ref = "javosc" }
 javaosc = { group = "com.illposed.osc", name = "javaosc", version = "0.7" }
+google-material = { group = "com.google.android.material", name = "material", version.ref = "materialVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
